# Cargo_Brand_Manager_Demo

./:  MSC Cargo Brand Manager — APX App Plan .rtf  .databricks-resources.json  DOCUMENTATION.md  README.md
app/: app.yaml  databricks.yml  pyproject.toml
app/msc_cargo_brand_manager/__dist__/: index.html
app/msc_cargo_brand_manager/backend/: app.py  config.py  core.py  models.py
app/msc_cargo_brand_manager/backend/routers/: campaigns.py  email.py  genie.py  kpi.py
app/msc_cargo_brand_manager/ui/: index.html  package.json  vite.config.ts
app/msc_cargo_brand_manager/ui/src/: App.tsx  index.css
app/msc_cargo_brand_manager/ui/src/pages/: Campaigns.tsx  Chat.tsx  Dashboard.tsx  Email.tsx
dataset/: GENIE_SPACE_INSTRUCTIONS.md  databricks_ddl.sql  dim_campaign.csv  dim_channel.csv  dim_date.csv  dim_region.csv  fact_brand_awareness.csv  fact_brand_compliance.csv  fact_campaign_performance.csv  fact_email_performance.csv  fact_nps.csv  fact_share_of_voice.csv  fact_social_performance.csv  fact_web_performance.csv
examples/: genie_rendering_guide.py
streamlit_app/: app.py  app.yaml
