[project]
name = "msc-cargo-brand-manager"
version = "0.1.0"
description = "MSC Cargo Brand Manager — single-pane-of-glass analytics app"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "databricks-sdk>=0.30.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
